[project]
name = "embedding-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.7",
    "python-dotenv>=1.2.1",
    "torch>=2.2.0",
    "transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
